--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.5'
 }
 
-group = 'com.example'
+group = 'com.example.ragollama'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -59,7 +59,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // implementation 'org.springframework.boot:spring-boot-starter-security' // УДАЛЕНО
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
@@ -106,11 +106,8 @@ dependencies {
     implementation "org.apache.commons:commons-math3:${commonsMathVersion}"
 
     // --- JAXB APIs for Java 11+ ---
-    // Новый (Jakarta) неймспейс, используемый в Spring Boot 3
     implementation "jakarta.xml.bind:jakarta.xml.bind-api:${jakartaXmlBindVersion}"
     runtimeOnly "org.glassfish.jaxb:jaxb-runtime:${glassfishJaxbVersion}"
-
-    // Старый (javax) неймспейс, необходимый для обратной совместимости со springdoc-openapi
     runtimeOnly "javax.xml.bind:jaxb-api:${javaxJaxbApiVersion}"
     runtimeOnly "org.glassfish.jaxb:jaxb-runtime:${glassfishJaxbRuntimeVersion}"
 
