--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,54 +4,66 @@ version: '3.8'
 # Определение сервисов (контейнеров)
 services:
 
+  # Сервис Spring Boot приложения (Бэкенд)
+  rag-app:
+    # Собираем образ из Dockerfile в корне проекта
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: rag-app
+    ports:
+      - "8080:8080" # Проброс порта приложения
+    environment:
+      # Настройки для подключения к другим сервисам внутри Docker сети
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/ragdb
+      - SPRING_AI_OLLAMA_BASE_URL=http://ollama:11434
+      - SPRING_RABBITMQ_HOST=rabbitmq
+      - APP_INTEGRATIONS_NEO4J_URI=bolt://neo4j:7687
+    depends_on:
+      # Запускаем приложение только после того, как базы данных и Ollama будут "здоровы"
+      postgres:
+        condition: service_healthy
+      ollama:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      neo4j:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - rag-net
+
   # Сервис PostgreSQL с расширением pgvector
   postgres:
-    # Используем официальный образ pgvector, который включает PostgreSQL и расширение
     image: pgvector/pgvector:pg16
     container_name: rag-postgres
-    # Переменные окружения для настройки PostgreSQL
     environment:
-      # Имя пользователя базы данных
       - POSTGRES_USER=user
-      # Пароль для пользователя
       - POSTGRES_PASSWORD=password
-      # Имя создаваемой по умолчанию базы данных
       - POSTGRES_DB=ragdb
-    # Проброс портов: <порт на хосте>:<порт в контейнере>
-    # Позволяет нашему приложению, запущенному на хосте, подключаться к БД в контейнере
     ports:
       - "5432:5432"
-    # Тома (volumes) для сохранения данных между перезапусками контейнера
     volumes:
-      # Именованный том для хранения данных PostgreSQL
       - postgres-data:/var/lib/postgresql/data
-    # Политика перезапуска контейнера в случае сбоя
     restart: unless-stopped
-    # Проверка состояния. Docker будет считать сервис "здоровым",
-    # если команда pg_isready успешно выполняется.
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U user -d ragdb" ]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
-    # Сеть, к которой будет подключен контейнер
     networks:
       - rag-net
 
   # Сервис Ollama для запуска локальных LLM
   ollama:
-    # Используем официальный образ Ollama
     image: ollama/ollama
     container_name: rag-ollama
-    # Проброс порта API Ollama
     ports:
       - "11434:11434"
-    # Том для сохранения загруженных моделей
     volumes:
       - ollama-data:/root/.ollama
     restart: unless-stopped
-    # Проверка состояния. Проверяем, что API Ollama отвечает.
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:11434/api/tags" ]
       interval: 10s
@@ -63,20 +75,18 @@ services:
 
   # Сервис RabbitMQ для управления очередями событий
   rabbitmq:
-    # Используем образ с плагином management для веб-интерфейса
     image: rabbitmq:3.13-management
     container_name: rag-rabbitmq
     ports:
-      - "5672:5672" # Порт для подключения клиентов (наше Spring приложение)
-      - "15672:15672" # Порт для веб-интерфейса управления
-    volumes: # Том для сохранения состояния RabbitMQ
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
       - rabbitmq-data:/var/lib/rabbitmq
-    environment: # Настройки по умолчанию (можно переопределить)
+    environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
     restart: unless-stopped
     healthcheck:
-      # Проверяем, что брокер доступен и работает
       test: [ "CMD", "rabbitmq-diagnostics", "ping" ]
       interval: 10s
       timeout: 5s
@@ -85,16 +95,16 @@ services:
     networks:
       - rag-net
 
-  neo4j: # Графовая база данных Neo4j
+  # Графовая база данных Neo4j
+  neo4j:
     image: neo4j:5
     container_name: rag-neo4j
     ports:
-      - "7474:7474" # HTTP-интерфейс (браузер)
-      - "7687:7687" # Bolt-протокол для драйверов
+      - "7474:7474"
+      - "7687:7687"
     volumes:
       - neo4j-data:/data
     environment:
-      # Устанавливаем пароль. В production использовать секреты.
       - NEO4J_AUTH=neo4j/password
     restart: unless-stopped
     healthcheck:
