--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "8080:8080" # Проброс порта приложения
     environment:
       # Настройки для подключения к другим сервисам внутри Docker сети
+      # Приложение внутри Docker будет использовать имена сервисов как хосты.
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/ragdb
       - SPRING_AI_OLLAMA_BASE_URL=http://ollama:11434
       - SPRING_RABBITMQ_HOST=rabbitmq
@@ -41,7 +42,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=ragdb
     ports:
-      - "5432:5432"
+      - "5432:5432" # Проброс порта для подключения из IDE/локального запуска
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -59,7 +60,7 @@ services:
     image: ollama/ollama
     container_name: rag-ollama
     ports:
-      - "11434:11434"
+      - "11434:11434" # Проброс порта для подключения из IDE/локального запуска
     volumes:
       - ollama-data:/root/.ollama
     restart: unless-stopped
@@ -77,8 +78,8 @@ services:
     image: rabbitmq:3.13-management
     container_name: rag-rabbitmq
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "5672:5672" # AMQP порт
+      - "15672:15672" # Management UI порт
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
     environment:
@@ -99,8 +100,8 @@ services:
     image: neo4j:5
     container_name: rag-neo4j
     ports:
-      - "7474:7474"
-      - "7687:7687"
+      - "7474:7474" # Проброс порта для веб-интерфейса
+      - "7687:7687" # Проброс порта для Bolt-протокола (для драйвера)
     volumes:
       - neo4j-data:/data
     environment:
@@ -115,7 +116,7 @@ services:
     networks:
       - rag-net
 
-# Определение именованных томов
+# Определение именованных томов для персистентного хранения данных
 volumes:
   postgres-data:
     driver: local
@@ -126,7 +127,7 @@ volumes:
   neo4j-data:
     driver: local
 
-# Определение сетей
+# Определение сетей для взаимодействия сервисов
 networks:
   rag-net:
     driver: bridge
