--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ dependencyManagement {
 }
 
 dependencies {
-    // --- Spring Boot Starters ---
+    // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -65,36 +65,37 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
     implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    // --- HTTP Client for WebClient ---
+    // HTTP Client for WebClient
     implementation 'io.projectreactor.netty:reactor-netty-http'
 
-    // --- Spring AI & RAG ---
+    // Spring AI & RAG
     implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
     implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
     implementation "com.knuddels:jtokkit:${jtokkitVersion}"
 
-    // --- Локальные ML модели для Reranking (Cross-Encoder) ---
+    // Локальные ML модели для Reranking (Cross-Encoder)
     implementation "ai.djl.pytorch:pytorch-engine:0.29.0"
     implementation "ai.djl.huggingface:tokenizers:${djlVersion}"
 
-    // --- Database & Persistence ---
+    // Database & Persistence
     runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"
     implementation "org.flywaydb:flyway-core:${flywayVersion}"
     implementation "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
     implementation "io.hypersistence:hypersistence-utils-hibernate-63:${hypersistenceUtilsVersion}"
 
-    // --- Resilience & Rate Limiting ---
+    // Resilience & Rate Limiting
     implementation 'io.github.resilience4j:resilience4j-spring-boot3'
     implementation 'io.github.resilience4j:resilience4j-reactor'
     implementation "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
 
-    // --- Observability & API Docs ---
+    // Observability & API Docs
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenapiVersion}"
     implementation "io.micrometer:micrometer-registry-prometheus:${micrometerPrometheusVersion}"
     implementation "io.micrometer:context-propagation:${contextPropagationVersion}"
 
-    // --- Code Generation & Utilities ---
+    // Code Generation & Utilities
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     compileOnly "org.mapstruct:mapstruct:${mapstructVersion}"
@@ -102,7 +103,7 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
     implementation "org.jsoup:jsoup:${jsoupVersion}"
 
-    // --- Agent Tooling & Code Analysis ---
+    // Agent Tooling & Code Analysis
     implementation "com.github.javaparser:javaparser-core:${javaparserVersion}"
     implementation "net.sourceforge.pmd:pmd-java:${pmdVersion}"
     implementation "org.eclipse.jgit:org.eclipse.jgit:${jgitVersion}"
@@ -110,12 +111,12 @@ dependencies {
     implementation "com.microsoft.playwright:playwright:${playwrightVersion}"
     implementation "org.apache.commons:commons-math3:${commonsMathVersion}"
 
-    // --- JAXB APIs for Java 11+ (Unified to Jakarta) ---
+    // JAXB APIs for Java 11+ (Unified to Jakarta)
     implementation "javax.xml.bind:jaxb-api:${jaxbApiVersion}"
     implementation "jakarta.xml.bind:jakarta.xml.bind-api:${jakartaXmlBindVersion}"
     runtimeOnly "org.glassfish.jaxb:jaxb-runtime:${glassfishJaxbVersion}"
 
-    // --- Testing ---
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
