--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.1'
     id 'io.spring.dependency-management' version '1.1.5'
+    id "com.github.node-gradle.node" version "7.0.2"
 }
 
 group = 'com.example.ragollama'
@@ -57,6 +58,7 @@ dependencyManagement {
 }
 
 dependencies {
+    // ... (все ваши зависимости остаются без изменений) ...
     // Spring Boot Starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -111,7 +113,7 @@ dependencies {
     implementation "com.microsoft.playwright:playwright:${playwrightVersion}"
     implementation "org.apache.commons:commons-math3:${commonsMathVersion}"
 
-    // JAXB APIs for Java 11+ (Unified to Jakarta)
+    // --- УПРАВЛЕНИЕ JAXB API (ИСПРАВЛЕНО ДЛЯ СОВМЕСТИМОСТИ) ---
     implementation "javax.xml.bind:jaxb-api:${jaxbApiVersion}"
     implementation "jakarta.xml.bind:jakarta.xml.bind-api:${jakartaXmlBindVersion}"
     runtimeOnly "org.glassfish.jaxb:jaxb-runtime:${glassfishJaxbVersion}"
@@ -123,6 +125,21 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
 }
+
+
+// --- ИНТЕГРАЦИЯ СБОРКИ ФРОНТЕНДА (ЭТАЛОННАЯ РЕАЛИЗАЦИЯ) ---
+node {
+    version = '20.11.1'
+    npmVersion = '10.2.4'
+    download = true
+    nodeProjectDir = file("${project.projectDir}/src/main/resources/frontend")
+}
+
+tasks.named('npm_run_build') {
+    dependsOn(tasks.named('npmInstall'))
+}
+
+processResources.dependsOn(tasks.named('npm_run_build'))
 
 tasks.withType(Test) {
     useJUnitPlatform()
