--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -9,25 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "marked": "^12.0.2",
-    "prismjs": "^1.29.0",
+    "@tanstack/react-query": "^5.51.1",
+    "lucide-react": "^0.408.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/marked": "^6.0.0",
-    "@types/prismjs": "^1.26.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite": "^5.2.0"
   }
 }
