--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -17,7 +17,8 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
