--- a/build.gradle
+++ b/build.gradle
@@ -58,17 +58,14 @@ dependencyManagement {
 }
 
 dependencies {
-    // ... (все ваши зависимости остаются без изменений) ...
-    // Spring Boot Starters
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // --- Spring Boot Starters ---
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
     implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
-
-    // HTTP Client for WebClient
     implementation 'io.projectreactor.netty:reactor-netty-http'
 
     // Spring AI & RAG
@@ -92,7 +89,7 @@ dependencies {
     implementation "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
 
     // Observability & API Docs
-    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenapiVersion}"
+    implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${springdocOpenapiVersion}"
     implementation "io.micrometer:micrometer-registry-prometheus:${micrometerPrometheusVersion}"
     implementation "io.micrometer:context-propagation:${contextPropagationVersion}"
 
