--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,22 +77,13 @@ services:
   # Инициализатор моделей для Ollama.
   # Этот "одноразовый" контейнер запускается, выполняет скрипт и завершается.
   ollama-init:
-    image: bash:latest
+    build:
+      context: ./scripts
+      dockerfile: ollama-init.Dockerfile
     container_name: rag-ollama-init
     depends_on:
       ollama:
         condition: service_healthy
-    command: >
-      /bin/sh -c "
-        echo 'Waiting for Ollama to be fully ready...' && sleep 5;
-        echo 'Pulling llama3 model...';
-        curl http://ollama:11434/api/pull -d '{\"name\": \"llama3\"}';
-        echo 'Pulling phi3 model...';
-        curl http://ollama:11434/api/pull -d '{\"name\": \"phi3\"}';
-        echo 'Pulling mxbai-embed-large model...';
-        curl http://ollama:11434/api/pull -d '{\"name\": \"mxbai-embed-large\"}';
-        echo 'Model initialization complete.';
-      "
     restart: on-failure
     networks:
       - rag-net
